# BUAA_2024_Compiler

./: CMakeLists.txt  main.cpp
CodeGenerator/CourseDefined/src/: libsysy.c
CodeGenerator/handleProcess/include/: ICGenerator.h  MipsTranslator.h  SymbolTableHandler.h
CodeGenerator/handleProcess/src/: ICGenerator.cpp  MipsTranslator.cpp
CodeGenerator/include/: FileProcess.h  ForBlock.h  GrammarItem.h  Lexer.h  Parser.h  Symbol.h  TokenType.h  Tool.h  WhileBlock.h
CodeGenerator/item/ErrorHandle/include/: ErrorNode.h  ErrorType.h
CodeGenerator/item/lexer/include/: Symbol.h
CodeGenerator/item/mipsGenerator/include/: Reg.h
CodeGenerator/item/quadrupleGenerator/include/: QuadEntry.h  QuadEntryType.h  QuadItem.h  QuadItemChar.h  QuadItemCharArray.h  QuadItemFunc.h  QuadItemImc.h  QuadItemImm.h  QuadItemInt.h  QuadItemIntArray.h  QuadItemLabel.h  QuadItemString.h  QuadItemType.h
CodeGenerator/item/quadrupleGenerator/src/: QuadEntry.cpp  QuadItem.cpp  QuadItemChar.cpp  QuadItemCharArray.cpp  QuadItemFunc.cpp  QuadItemInt.cpp  QuadItemIntArray.cpp
CodeGenerator/item/symbolTable/include/: ConstValue.h  ReferencedEntry.h  SymbolTable.h  SymbolTableEntry.h  SymbolTableEntryType.h
CodeGenerator/item/symbolTable/src/: SymbolTable.cpp  SymbolTableEntry.cpp  SymbolTableHandler.cpp
CodeGenerator/item/tree/include/: Node.h
CodeGenerator/item/tree/src/: Node.cpp
CodeGenerator/item/variableType/: Char.h  CharArray.h  CharFunc.h  ConstChar.h  ConstCharArray.h  ConstInt.h  ConstIntArray.h  FuncParam.h  Int.h  IntArray.h  IntFunc.h  VoidFunc.h
CodeGenerator/src/: FileProcess.cpp  ForBlock.cpp  GrammarItem.cpp  Lexer.cpp  Parser.cpp  TokenType.cpp  WhileBlock.cpp
