cmake_minimum_required(VERSION 3.15.3)
project(Compiler)

set(CMAKE_CXX_STANDARD 17)

add_executable(Compiler main.cpp
        CodeGenerator/src/Lexer.cpp
        CodeGenerator/include/Lexer.h
        CodeGenerator/src/TokenType.cpp
        CodeGenerator/include/TokenType.h
        CodeGenerator/src/FileProcess.cpp
        CodeGenerator/include/FileProcess.h
        CodeGenerator/include/Tool.h
        CodeGenerator/include/Parser.h
        CodeGenerator/src/Parser.cpp
        CodeGenerator/item/tree/include/Node.h
        CodeGenerator/item/tree/src/Node.cpp
        CodeGenerator/include/Symbol.h
        CodeGenerator/include/GrammarItem.h
        CodeGenerator/src/GrammarItem.cpp
        CodeGenerator/item/symbolTable/include/SymbolTable.h
        CodeGenerator/item/symbolTable/include/SymbolTableEntry.h
        CodeGenerator/item/symbolTable/include/SymbolTableEntryType.h
        CodeGenerator/item/symbolTable/src/SymbolTable.cpp
        CodeGenerator/item/symbolTable/src/SymbolTableEntry.cpp
        CodeGenerator/item/symbolTable/include/ReferencedEntry.h
        CodeGenerator/item/variableType/ConstChar.h
        CodeGenerator/item/variableType/IntArray.h
        CodeGenerator/item/variableType/CharArray.h
        CodeGenerator/item/variableType/ConstIntArray.h
        CodeGenerator/item/variableType/ConstCharArray.h
        CodeGenerator/item/variableType/ConstInt.h
        CodeGenerator/item/variableType/Char.h
        CodeGenerator/item/variableType/Int.h
        CodeGenerator/item/variableType/VoidFunc.h
        CodeGenerator/item/variableType/CharFunc.h
        CodeGenerator/item/variableType/IntFunc.h
        CodeGenerator/item/variableType/FuncParam.h
        CodeGenerator/handleProcess/include/SymbolTableHandler.h
        CodeGenerator/item/symbolTable/src/SymbolTableHandler.cpp
        CodeGenerator/item/ErrorHandle/include/ErrorNode.h
        CodeGenerator/item/ErrorHandle/include/ErrorType.h
        CodeGenerator/item/symbolTable/include/ConstValue.h
        CodeGenerator/handleProcess/include/ICGenerator.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItem.h
        CodeGenerator/item/quadrupleGenerator/include/QuadEntry.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemType.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemIntArray.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemLabel.h
        CodeGenerator/item/quadrupleGenerator/include/QuadEntryType.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemInt.h
        CodeGenerator/item/quadrupleGenerator/src/QuadEntry.cpp
        CodeGenerator/item/quadrupleGenerator/src/QuadItemIntArray.cpp
        CodeGenerator/item/quadrupleGenerator/src/QuadItemFunc.cpp
        CodeGenerator/item/quadrupleGenerator/src/QuadItemInt.cpp
        CodeGenerator/item/quadrupleGenerator/include/QuadItemImm.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemFunc.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemString.h
        CodeGenerator/item/mipsGenerator/include/Reg.h
        CodeGenerator/handleProcess/src/ICGenerator.cpp
        CodeGenerator/item/lexer/include/Symbol.h
        CodeGenerator/item/quadrupleGenerator/include/QuadItemChar.h
        CodeGenerator/item/quadrupleGenerator/src/QuadItemChar.cpp
        CodeGenerator/item/quadrupleGenerator/include/QuadItemCharArray.h
        CodeGenerator/item/quadrupleGenerator/src/QuadItemCharArray.cpp
        CodeGenerator/item/quadrupleGenerator/include/QuadItemImc.h
        CodeGenerator/handleProcess/include/MipsTranslator.h
        CodeGenerator/handleProcess/src/MipsTranslator.cpp
        CodeGenerator/include/ForBlock.h
        CodeGenerator/src/ForBlock.cpp
        CodeGenerator/CourseDefined/include/libsysy.h
        CodeGenerator/CourseDefined/src/libsysy.c
        CodeGenerator/item/quadrupleGenerator/src/QuadItem.cpp
        CodeGenerator/include/WhileBlock.h
        CodeGenerator/src/WhileBlock.cpp
)
